Javascript and functionality completed.

--- a/index.html
+++ b/index.html
@@ -45,5 +45,7 @@
             </button>
         </div>
     </main>
+
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
